--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
   },
   "homepage": "https://github.com/ddVital/fun-facts-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^9.0.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "mongoose": "^5.12.10"
+    "express-session": "^1.17.2",
+    "mongoose": "^5.12.10",
+    "node-cron": "^3.0.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
