--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fun-facts-api",
   "version": "1.0.0",
   "description": "Fun facts api",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
